--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -659,7 +659,7 @@
                                 android:drawableStart="@drawable/ic_credit_card"
                                 android:gravity="start|center_vertical"
                                 android:hint="@string/card_number"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingEnd="15dp"
                                 android:paddingStart="15dp"
                                 android:textColor="@color/textColorSecondary"
@@ -684,7 +684,7 @@
                                 android:drawableStart="@drawable/ic_credit_card"
                                 android:gravity="start|center_vertical"
                                 android:hint="@string/card_cvv"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingEnd="15dp"
                                 android:paddingStart="15dp"
                                 android:textColor="@color/textColorSecondary"
