--- a/app/src/main/res/layout/fragment_add_breeding_stock.xml
+++ b/app/src/main/res/layout/fragment_add_breeding_stock.xml
@@ -367,7 +367,7 @@
                                     android:layout_margin="0dp"
                                     android:layout_weight="0.8"
                                     android:background="@android:color/transparent"
-                                    android:inputType="number"
+                                    android:inputType="numberDecimal"
                                     android:paddingStart="@dimen/dimen_10dp"
                                     android:textSize="14sp" />
 
