--- a/app/src/main/res/layout/fragment_revenue_estimator_step1.xml
+++ b/app/src/main/res/layout/fragment_revenue_estimator_step1.xml
@@ -129,7 +129,7 @@
                             android:layout_weight="0.65"
                             android:background="@android:color/transparent"
                             android:hint="Yield Per Acre"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingLeft="@dimen/dimen_10dp"
                             android:textSize="16sp" />
 
@@ -182,7 +182,7 @@
                             android:layout_weight="0.5"
                             android:background="@android:color/transparent"
                             android:hint="Average Market Price"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingLeft="@dimen/dimen_10dp"
                             android:textSize="16sp" />
 
@@ -235,7 +235,7 @@
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
                             android:hint="@string/other_income"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingLeft="@dimen/dimen_10dp"
                             android:textSize="16sp" />
 
@@ -276,7 +276,7 @@
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
                             android:hint="Est Gross Revenue"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:padding="@dimen/dimen_10dp"
                             android:textSize="16sp" />
                     </LinearLayout>
