--- a/app/src/main/res/layout/fragment_store_add_seed.xml
+++ b/app/src/main/res/layout/fragment_store_add_seed.xml
@@ -283,7 +283,7 @@
                         android:layout_weight="0.8"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:background="@android:color/transparent"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:textSize="14sp" />
 
                     <TextView
@@ -362,7 +362,7 @@
                                 android:layout_weight="0.7"
                                 android:paddingStart="@dimen/dimen_10dp"
                                 android:background="@android:color/transparent"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:textSize="14sp" />
 
                             <TextView
