--- a/app/src/main/res/layout/fragment_store_add_spray.xml
+++ b/app/src/main/res/layout/fragment_store_add_spray.xml
@@ -258,7 +258,7 @@
                         android:layout_weight="0.8"
                         android:paddingStart="@dimen/dimen_10dp"
                         android:background="@android:color/transparent"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:textSize="14sp" />
 
                     <TextView
@@ -337,7 +337,7 @@
                             android:layout_weight="0.7"
                             android:paddingStart="@dimen/dimen_10dp"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:textSize="14sp" />
 
                         <TextView
