--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -148,7 +148,7 @@
                     android:paddingStart="@dimen/dimen_10dp"
                     android:background="@drawable/edittext_corner"
                     android:hint="Enter.."
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:paddingLeft="2dp"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -206,7 +206,7 @@
                         android:paddingStart="@dimen/dimen_10dp"
                         android:background="@drawable/edittext_corner"
                         android:hint="Enter.."
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingLeft="2dp"
                         android:textSize="12sp" />
                 </LinearLayout>
@@ -232,7 +232,7 @@
                     android:paddingStart="@dimen/dimen_10dp"
                     android:background="@drawable/edittext_corner"
                     android:hint="Enter.."
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:paddingLeft="2dp"
                     android:textSize="12sp" />
             </LinearLayout>
