--- a/app/src/main/res/layout-land/crop_record_payment_received.xml
+++ b/app/src/main/res/layout-land/crop_record_payment_received.xml
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Enter.."
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:textSize="14sp"
                     android:background="@drawable/input_shapes"
                     android:layout_weight="1"
@@ -215,7 +215,7 @@
                     android:hint="Enter.."
                     android:layout_weight="0.3"
 
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:textSize="14sp"
                     android:background="@drawable/input_shapes"
 
@@ -282,7 +282,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:background="@drawable/input_shapes"
                 android:hint="Enter.."
                 android:textSize="14sp"
