--- a/app/src/main/res/layout/buy_inputs_search_merchant_layout.xml
+++ b/app/src/main/res/layout/buy_inputs_search_merchant_layout.xml
@@ -77,7 +77,7 @@
                             android:ems="3"
                             android:hint="Enter.."
 
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:textSize="14sp"
 
                             />
@@ -133,7 +133,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Enter.."
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingLeft="2dp"
                         android:textSize="12sp" />
                 </LinearLayout>
@@ -155,7 +155,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Eg. 0123"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingLeft="2dp"
                         android:textSize="12sp" />
                 </LinearLayout>
