--- a/app/src/main/res/layout/fragment_add_crop.xml
+++ b/app/src/main/res/layout/fragment_add_crop.xml
@@ -397,7 +397,7 @@
                         android:layout_margin="0dp"
                         android:layout_weight="0.8"
                         android:background="@android:color/transparent"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingStart="@dimen/dimen_10dp" />
 
                     <TextView
