--- a/app/src/main/res/layout/fragment_add_financial_record.xml
+++ b/app/src/main/res/layout/fragment_add_financial_record.xml
@@ -293,7 +293,7 @@
                         android:layout_height="50dp"
                         android:layout_weight="0.5"
                         android:background="@drawable/edittext_corner"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingStart="@dimen/dimen_10dp"
                         android:textSize="14sp" />
                 </LinearLayout>
