--- a/app/src/main/res/layout/fragment_add_mating.xml
+++ b/app/src/main/res/layout/fragment_add_mating.xml
@@ -256,7 +256,7 @@
                                     android:layout_margin="0dp"
                                     android:layout_weight="0.8"
                                     android:background="@android:color/transparent"
-                                    android:inputType="number"
+                                    android:inputType="numberDecimal"
                                     android:paddingStart="@dimen/dimen_10dp"
                                     android:textSize="14sp" />
 
@@ -306,7 +306,7 @@
                                     android:layout_margin="0dp"
                                     android:layout_weight="0.8"
                                     android:background="@android:color/transparent"
-                                    android:inputType="number"
+                                    android:inputType="numberDecimal"
                                     android:paddingStart="@dimen/dimen_10dp"
                                     android:textSize="14sp" />
 
