--- a/app/src/main/res/layout/fragment_crop_spraying.xml
+++ b/app/src/main/res/layout/fragment_crop_spraying.xml
@@ -232,7 +232,7 @@
                     android:layout_weight="0.6"
                     android:paddingStart="@dimen/dimen_10dp"
                     android:background="@android:color/transparent"
-                    android:inputType="number" />
+                    android:inputType="numberDecimal" />
 
                 <TextView
                     android:id="@+id/txt_crop_spraying_rate_units"
@@ -417,7 +417,7 @@
                     android:layout_weight="0.7"
                     android:paddingLeft="@dimen/dimen_10dp"
                     android:background="@android:color/transparent"
-                    android:inputType="number" />
+                    android:inputType="numberDecimal" />
 
                 <TextView
                     android:id="@+id/txt_crop_fertilizer_application_days_beforee"
