--- a/app/src/main/res/layout/fragment_revenue_estimator_step3.xml
+++ b/app/src/main/res/layout/fragment_revenue_estimator_step3.xml
@@ -118,7 +118,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -175,7 +175,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -231,7 +231,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -286,7 +286,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -341,7 +341,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
