--- a/app/src/main/res/layout/fragment_revenue_estimator_step4.xml
+++ b/app/src/main/res/layout/fragment_revenue_estimator_step4.xml
@@ -110,7 +110,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="48dp"
                                 android:background="@drawable/edittext_corner"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingLeft="@dimen/dimen_10dp"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -162,7 +162,7 @@
                                     android:layout_height="match_parent"
                                     android:layout_weight="0.7"
                                     android:background="@android:color/transparent"
-                                    android:inputType="number"
+                                    android:inputType="numberDecimal"
                                     android:paddingRight="@dimen/dimen_10dp"
                                     android:textAlignment="textEnd"
                                     android:textSize="14sp" />
@@ -207,7 +207,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:text="0"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -237,7 +237,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:text="0"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -298,7 +298,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.7"
                                 android:background="@android:color/transparent"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingLeft="@dimen/dimen_10dp"
                                 android:textSize="14sp" />
 
@@ -360,7 +360,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.5"
                                 android:background="@android:color/transparent"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingLeft="@dimen/dimen_10dp"
                                 android:textSize="14sp" />
 
@@ -411,7 +411,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.7"
                                 android:background="@android:color/transparent"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingLeft="@dimen/dimen_10dp"
                                 android:textSize="14sp" />
 
@@ -463,7 +463,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.7"
                                 android:background="@android:color/transparent"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingLeft="@dimen/dimen_10dp"
                                 android:textSize="14sp" />
 
@@ -526,7 +526,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.7"
                                 android:background="@android:color/transparent"
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:paddingLeft="@dimen/dimen_10dp"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -584,7 +584,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingLeft="@dimen/dimen_10dp"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -639,7 +639,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingLeft="@dimen/dimen_10dp"
                             android:textSize="14sp" />
                     </LinearLayout>
