--- a/app/src/main/res/layout/fragment_revenue_estimator_step5.xml
+++ b/app/src/main/res/layout/fragment_revenue_estimator_step5.xml
@@ -119,7 +119,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -176,7 +176,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -234,7 +234,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -291,7 +291,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:paddingRight="@dimen/dimen_10dp"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
