--- a/app/src/main/res/layout/wallet_buy.xml
+++ b/app/src/main/res/layout/wallet_buy.xml
@@ -79,7 +79,7 @@
                                 android:ems="3"
                                 android:hint="Enter.."
 
-                                android:inputType="number"
+                                android:inputType="numberDecimal"
                                 android:textSize="14sp"
 
                                 />
@@ -134,7 +134,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:hint="Enter.."
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:layout_marginTop="@dimen/margin_10"
                             android:background="@drawable/edittext_corner"
                             android:paddingLeft="10dp"
@@ -159,7 +159,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:hint="Enter.."
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:layout_marginTop="@dimen/margin_10"
                             android:background="@drawable/edittext_corner"
                             android:paddingLeft="10dp"
