--- a/app/src/main/res/drawable/edittext_left_corners_white.xml
+++ b/app/src/main/res/drawable/edittext_left_corners_white.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <stroke android:width="1dp" android:color="#BDBEC2"  />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item>
+        <shape android:shape="rectangle" >
+            <solid android:color="#BDBEC2" />
 
-    <corners android:topLeftRadius="4dp" android:topRightRadius="0dp"
-        android:bottomLeftRadius="4dp" android:bottomRightRadius="0dp"/>
-</shape>
+            <padding
+                android:bottom="1dp"
+                android:left="1dp"
+                android:right="0dp"
+                android:top="1dp" />
+            <corners android:topLeftRadius="4dp" android:topRightRadius="0dp"
+                android:bottomLeftRadius="4dp" android:bottomRightRadius="0dp"/>
+
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle" >
+            <padding
+                android:bottom="4dp"
+                android:left="4dp"
+                android:right="4dp"
+                android:top="4dp" />
+            <solid android:color="@color/colorPrimary" />
+            <corners android:topLeftRadius="4dp" android:topRightRadius="0dp"
+                android:bottomLeftRadius="4dp" android:bottomRightRadius="0dp"/>
+
+
+
+        </shape>
+    </item>
+</layer-list>
