--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -185,10 +185,10 @@
                                 android:orientation="horizontal">
                             <TextView
                                 android:id="@+id/txt_crops_estimated_revenue_units"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="0.7"
-                                android:background="@drawable/edittext_left_corners_white"
+                                android:layout_weight="0.3"
+                                android:background="@drawable/edittext_left_corners_green"
                                 android:gravity="center"
                                 android:text="+256"
                                 android:textStyle="bold"
@@ -196,18 +196,18 @@
                                 android:textSize="14sp" />
                             <EditText
                                 android:id="@+id/user_mobile"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:fontFamily="@font/josefin_sans"
                                 android:inputType="phone"
                                 android:paddingStart="@dimen/dimen_10dp"
                                 android:tag="+256 "
                                 android:maxLength="9"
-                                android:layout_weight="0.3"
+                                android:layout_weight="0.7"
+                                android:background="@android:color/transparent"
                                 android:textAlignment="viewStart"
                                 android:textColor="@android:color/black"
-                                android:textColorHint="@android:color/black"
-                                android:visibility="visible" />
+                                android:textColorHint="@android:color/black" />
                             </LinearLayout>
                         </LinearLayout>
 
@@ -381,7 +381,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="4dp"
+                            android:layout_marginBottom="4dp"
                             android:fontFamily="@font/josefin_sans"
                             android:text="@string/password" />
 
