--- a/app/src/main/res/layout/buy_inputs_categories_3.xml
+++ b/app/src/main/res/layout/buy_inputs_categories_3.xml
@@ -1,55 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:id="@+id/category_card"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:gravity="center"
-    android:layout_margin="3dp"
-    android:layout_centerInParent="true"
-    android:background="@color/white" >
-
-    <ImageView
-        android:id="@+id/category_icon"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:background="@color/palebrown"
-        android:scaleType="fitCenter" />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="@android:color/white"
+    android:elevation="1dp"
+    card_view:cardCornerRadius="3dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <TextView
-            android:layout_marginTop="4dp"
-            android:text="@string/title"
-            android:id="@+id/category_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:maxLines="1"
-            android:textStyle="bold"
-            android:textColor="@color/textColorPrimary"
-            android:gravity="center_horizontal" />
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_margin="10dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="4dp"
-            android:text="(2)"
-            android:id="@+id/category_products"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/category_icon"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:background="@color/palebrown"
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:visibility="gone"
-            android:gravity="center_horizontal" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/category_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center_horizontal"
+                android:maxLines="1"
+                android:text="@string/title"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/category_products"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center_horizontal"
+                android:text="(2)"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
