--- a/app/src/main/res/layout/buy_inputs_products.xml
+++ b/app/src/main/res/layout/buy_inputs_products.xml
@@ -7,27 +7,12 @@
     android:background="@color/windowBackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/product_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="scrollable"
-        app:tabIndicatorHeight="2dp"
-        app:tabBackground="@color/white"
-        android:background="@color/white"
-        app:tabTextColor="@color/textColorSecondaryLight"
-        app:tabIndicatorColor="@color/textColorSecondaryDark"
-        app:tabSelectedTextColor="@color/textColorSecondaryDark"
-        style="@style/MyCustomTabLayout"
-        android:visibility="gone"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/gray_head"
         android:alpha="0.7"
+        android:layout_marginTop="@dimen/dimen_20dp"
         android:orientation="horizontal">
 
         <TextView
