--- a/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
+++ b/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
@@ -105,7 +105,8 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/topBar"
         android:paddingLeft="@dimen/margin_10"
-        android:paddingRight="@dimen/margin_10" />
+        android:paddingRight="@dimen/margin_10"
+        android:paddingBottom="60dp" />
 
     <TextView
         android:id="@+id/empty_record"
