--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -166,12 +166,69 @@
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
-        <LinearLayout
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_10dp"
+            android:background="@drawable/rounded_corners_button"
+            android:backgroundTint="#E24C4B"
+           android:layout_marginBottom="@dimen/dimen_10dp">
+
+
+
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="clear cart"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/button_text_size" />
+
+            <ImageView
+                android:layout_width="30dip"
+                android:layout_height="30dip"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="right|center_vertical"
+                android:layout_margin="10dip"
+                android:src="@drawable/ic_right_arrow">
+            </ImageView>
+        </FrameLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:layout_marginBottom="@dimen/dimen_10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Add items"
+                android:textAlignment="center"
+                android:textColor="@color/white"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_shipping_car"
+                android:layout_gravity="end"/>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/cart_bottom_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:background="@drawable/topcornerscurved"
+            android:orientation="vertical"
+            android:elevation="@dimen/dimen_10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -194,24 +251,39 @@
                     android:textSize="16sp"
                     android:gravity="center"
                     android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    />
 
 
-                <Button
-                    android:id="@+id/cart_checkout_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="5dp"
-                    android:background="@drawable/rounded_corners_button_green"
-                    android:text="@string/checkoutFinal"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:layout_alignParentRight="true"
-                    android:gravity="center"
-                    android:layout_marginRight="5dp" />
+                <FrameLayout
+                    android:layout_width="209dp"
+                    android:layout_height="30dp"
+                    android:layout_alignLeft="@id/cart_pair_btn"
+                    android:layout_marginLeft="173dp"
+                    android:layout_marginTop="@dimen/dimen_10dp"
+                    android:background="@drawable/rounded_corners_button">
+
+
+                    <Button
+                        android:id="@+id/cart_checkout_btn"
+                        android:layout_width="214dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:text="Checkout"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/button_text_size" />
+
+                    <ImageView
+                        android:layout_width="30dip"
+                        android:layout_height="30dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_margin="10dip"
+                        android:src="@drawable/ic_right_arrow"></ImageView>
+                </FrameLayout>
 
             </RelativeLayout>
 
@@ -256,7 +328,7 @@
 
             </LinearLayout>-->
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
